--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "dark-mode"
   ],
   "license": "MIT",
+
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop --port 9000",
@@ -94,9 +95,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://lmhkkang.github.io/"
+    "url": "https://github.com/lmhkkang/lmhkkang.github.com"
   },
   "bugs": {
-    "url": "https://lmhkkang.github.io/"
+    "url": "https://github.com/lmhkkang/lmhkkang.github.com"
   }
 }
