package.json edit

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "description": "A clean, one-page portfolio using MDX",
   "version": "1.0.0",
   "author": "Konstantin Münster <mail@konstantin.digital>",
-  "main": "index.js",
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
@@ -55,7 +54,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "gatsby-plugin-eslint": "^2.0.8",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "2.0.0",
     "husky": "^4.3.5",
     "lint-staged": "^10.5.3",
     "netlify-plugin-cypress": "^1.4.1",
@@ -75,7 +74,6 @@
   ],
   "license": "MIT",
   "homepage": "https://lmhkkang.github.io/lmhkkang.github.io/",
-
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop --port 9000",
